# FPSE-Boggle

./: .gitignore  README.md  boggle.mli  dictionary.mli  dictionary.txt  dune-project  fpse_boggle.opam  game.mli  lib.mli  ngram.mli  trie.mli  words.txt
src/: aplusproject.ml  boggle.ml  boggle.mli  client.ml  data.ml  data.mli  dictionary.ml  dictionary.mli  dune  game.ml  game.mli  ngram.ml  ngram.mli  server.ml  trie.ml  trie.mli
test/: boggle_tests.ml  dictionary_tests.ml  dune  ngram_tests.ml  tests.ml  trie_tests.ml
