; (library
;  (name boggle)
;  (modules boggle)
;  (libraries core))

(library
 (name dictionary)
 (modules dictionary)
 (libraries core cohttp cohttp-lwt-unix lwt yojson core_unix.sys_unix))

(library
 (name game)
 (modules game)
 (libraries core stdio))

(library
 (name ngram)
 (modules ngram)
 (libraries core))

(library
 (name trie)
 (modules trie)
 (libraries core))

(executable 
 (name aplusproject)
 (modules aplusproject)
 (preprocess (pps ppx_jane))
 (libraries core game core_unix.command_unix))