(library 
 (name boggle_tests)
 (modules boggle_tests)
 (libraries ounit2 core boggle trie))

(library
 (name dictionary_tests)
 (modules dictionary_tests)
 (libraries ounit2 core dictionary))

(library 
 (name ngram_tests)
 (modules ngram_tests)
 (libraries ounit2 ngram))

(library 
 (name trie_tests)
 (modules trie_tests)
 (libraries ounit2 trie))

(test 
 (name tests)
 (modules tests)
 (libraries ounit2 core boggle_tests dictionary_tests ngram_tests trie_tests))

